# iceberg-ruby

./: CHANGELOG.md  Cargo.toml  Gemfile  NOTICE.txt  README.md  Rakefile  iceberg.gemspec
.github/workflows/: build.yml  release.yml
ext/iceberg/: Cargo.toml  extconf.rb
ext/iceberg/src/: arrow.rs  batch.rs  capsule.rs  catalog.rs  encryption.rs  error.rs  lib.rs  partitioning.rs  result.rs  runtime.rs  scan.rs  schema.rs  snapshot.rs  sorting.rs  statistics.rs  table.rs  utils.rs
lib/: iceberg.rb
lib/iceberg/: catalog.rb  glue_catalog.rb  memory_catalog.rb  rest_catalog.rb  result.rb  s3_tables_catalog.rb  schema.rb  sql_catalog.rb  static_table.rb  table.rb  table_definition.rb  table_scan.rb  transforms.rb  types.rb  version.rb
test/: arrow_test.rb  catalog_test.rb  create_table_test.rb  namespace_test.rb  polars_test.rb  schema_test.rb  sql_test.rb  static_table_test.rb  table_scan_test.rb  table_test.rb  test_helper.rb  transforms_test.rb  types_test.rb
test/support/: metadata.json  schema_changes.py
