[package]
name = "iceberg-ruby"
version = "0.11.2"
license = "Apache-2.0"
authors = ["Andrew Kane <andrew@ankane.org>"]
edition = "2024"
rust-version = "1.94"
publish = false

[lib]
name = "iceberg"
crate-type = ["cdylib"]

[dependencies]
arrow = "58"
arrow-array = { version = "58", features = ["ffi"] }
arrow-cast = "58"
arrow-schema = "58"
datafusion = { version = "53", optional = true }
futures = "0.3"
iceberg = "=0.10.0"
iceberg-catalog-glue = { version = "=0.10.0", optional = true }
iceberg-catalog-rest = { version = "=0.10.0", optional = true }
iceberg-catalog-s3tables = { version = "=0.10.0", optional = true }
iceberg-catalog-sql = { version = "=0.10.0", optional = true }
iceberg-datafusion = { version = "=0.10.0", optional = true }
iceberg-storage-opendal = "=0.10.0"
magnus = "0.8"
parquet = "58"
rb-sys = "0.9"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "sqlite"], default-features = false, optional = true }
tokio = { version = "1", features = ["rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }

[features]
default = ["glue", "rest", "s3tables", "sql"]
datafusion = ["dep:datafusion", "dep:iceberg-datafusion"]
glue = ["dep:iceberg-catalog-glue"]
rest = ["dep:iceberg-catalog-rest"]
s3tables = ["dep:iceberg-catalog-s3tables"]
sql = ["dep:iceberg-catalog-sql", "dep:sqlx"]
